--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@vuepress/client": "2.0.0-beta.61",
     "@vuepress/plugin-docsearch": "^2.0.0-beta.61",
+    "@vuepress/plugin-google-analytics": "^1.9.9",
     "@vuepress/plugin-search": "^2.0.0-beta.61",
     "@vuepress/plugin-shiki": "^2.0.0-beta.61",
     "vue": "^3.2.47",
