--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -17,6 +17,6 @@ jobs:
       - name: 部署 🚀
         uses: JamesIves/github-pages-deploy-action@v4
         with:
-          cname: docs.plumliil.cn
+          cname: notes.plumliil.cn
           branch: gh-pages
           folder: src/.vuepress/dist
