--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "plumliil-docs",
+  "name": "plumliil-notes",
   "version": "2.0.0",
   "description": "Plumliil's library of documents",
   "license": "MIT",
   "type": "module",
   "scripts": {
+    "build": "vuepress build src",
     "docs:build": "vuepress build src",
     "docs:clean-dev": "vuepress dev src --clean-cache",
     "docs:dev": "vuepress dev src",
