--- a/.github/workflows/cf-deploy.yml
+++ b/.github/workflows/cf-deploy.yml
@@ -4,28 +4,14 @@ permissions:
   contents: write
 
 jobs: 
-  github-page-deploy:
-    name: 笔记发布工作
-    runs-on: ubuntu-latest
-    steps:
-      - name: 读取仓库内容 👀
-        uses: actions/checkout@v4
-      - name: 安装依赖 + 构建文档 📚
-        run: |
-          yarn install
-          yarn docs:build
-      - name: 部署 github page 🚀
-        uses: JamesIves/github-pages-deploy-action@v4
-        with:
-          branch: gh-pages
-          folder: src/.vuepress/dist
-
   cloudflare-page-deploy:
-    name: 笔记发布工作
+    name: cloudflare page 发布工作
     runs-on: ubuntu-latest
     steps:
       - name: 读取仓库内容 👀
         uses: actions/checkout@v4
+      - name: 修改 base 配置为 /
+        run: sed -i 's|base: .*,|base: "/",|' src/.vuepress/config.js
       - name: 安装依赖 + 构建文档 📚
         run: |
           yarn install
